Fixed menu width on mobile

--- a/src/components/side-menu/style.module.scss
+++ b/src/components/side-menu/style.module.scss
@@ -17,7 +17,7 @@
 }
 
 .sideMenu {
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 70px);
   position: fixed;
   transition: margin-left 0.5s;
